--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mockjs": "^1.1.0",
     "vant": "^2.4.0",
     "vue": "^2.6.10",
+    "vue-drag-drop": "^1.1.4",
+    "vue-monoplasty-slide-verify": "^1.1.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
